# 21sh

./: 21sh  CMakeLists.txt  Makefile  minishell.h
analyzer/: lexer.c  lists.c  make_tree.c  valid_tokens.c
builtins/: chdir.c  echo.c  env.c  env2.c  pwd.c  pwd_update.c  setenv.c  unsetenv.c
builtins/cd/: chdir.c  pwd_update.c
builtins/echo/: echo.c
builtins/env/: env.c  env2.c
builtins/pwd/: pwd.c
builtins/setenv/: setenv.c
builtins/unsetenv/: unsetenv.c
error/: perror.c
execute/: execute.c
includes/: analyzer.h  error.h  libft.h  minishell.h  printf.h  shell.h
lexer/: lexer.h
libft/: Makefile  ft_bzero.c  ft_itoa.c  ft_max.c  ft_memset.c  ft_strcat.c  ft_strchr.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strncpy.c  ft_strnew.c  ft_strsplit.c  ft_strsub.c  ft_strtok.c  ft_strtrim.c  ft_strwdup.c  ft_strwlen.c  libft.h
libft/ft_printf/: ft_conditions.c  ft_flag_funcs.c  ft_info.c  ft_new_malloc.c  ft_printf_list_func_2.c  ft_put_adress.c  ft_put_float.c  ft_put_int.c  ft_put_unsigned.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c  ft_return_flags.c  ft_return_num.c  ft_round_dioux.c  ft_strdup_n.c  ft_strnew.c  ft_strrev.c  ft_strupper.c
line_edit/: draw.c  edit.c
parse/: main.c  parse.c  parse_tree.c
print/: print.c
realloc/: realloc.c
signal/: signal.c
sup/: support.c
term/: char.c  cursor.c  delete.c  key_move.c  term_init.c
tty/: set_attr.c
